Delete latex and update CV

--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,6 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{sgem,
+  title={{SGEM}: Test-Time Adaptation for Automatic Speech Recognition via Sequential-Level Generalized Entropy Minimization},
+  author={Kim, Changhun and Park, Joonhyung and Shim, Hajin and Yang, Eunho},
+  booktitle={Conference of the International Speech Communication Association (INTERSPEECH)},
+  year={2023}
 }
