--- a/content/publication/sgem/cite.bib
+++ b/content/publication/sgem/cite.bib
@@ -1,5 +1,5 @@
-@inproceedings{sgem,
-  title={{SGEM}: Test-Time Adaptation for Automatic Speech Recognition via Sequential-Level Generalized Entropy Minimization},
+@inproceedings{kim2023sgem,
+  title={{SGEM: Test-Time Adaptation for Automatic Speech Recognition via Sequential-Level Generalized Entropy Minimization}},
   author={Kim, Changhun and Park, Joonhyung and Shim, Hajin and Yang, Eunho},
   booktitle={Conference of the International Speech Communication Association (INTERSPEECH)},
   year={2023}
