--- a/content/publication/adaptable/cite.bib
+++ b/content/publication/adaptable/cite.bib
@@ -1,4 +1,4 @@
-@article{adaptable,
+@article{kim2024adaptable,
   title={{AdapTable: Test-Time Adaptation for Tabular Data via Shift-Aware Uncertainty Calibrator and Label Distribution Handler}},
   author={Kim, Changhun and Kim, Taewon and Woo, Seungyeon and Yang, June Yong and Yang, Eunho},
   journal={arXiv preprint arXiv:2407.10784},
