--- a/content/publications/adaptable/cite.bib
+++ b/content/publications/adaptable/cite.bib
@@ -1,6 +1,6 @@
 @article{kim2024adaptable,
   title={{AdapTable: Test-Time Adaptation for Tabular Data via Shift-Aware Uncertainty Calibrator and Label Distribution Handler}},
   author={Kim, Changhun and Kim, Taewon and Woo, Seungyeon and Yang, June Yong and Yang, Eunho},
-  journal={arXiv preprint arXiv:2407.10784},
+  journal={NeurIPS Workshop on Table Representation Learning (NeurIPSW-TRL)},
   year={2024}
 }
