Update SPAM and Timing

--- a/content/publications/stable-tts/cite.bib
+++ b/content/publications/stable-tts/cite.bib
@@ -1,6 +1,6 @@
-@article{han2025stabletts,
+@inproceedings{han2025stabletts,
   title={{Stable-TTS: Stable Speaker-Adaptive Text-to-Speech Synthesis via Prosody Prompting}},
   author={Han, Wooseok and Kang, Minki and Kim, Changhun and Yang, Eunho},
-  journal={IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)},
+  booktitle={IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)},
   year={2025}
 }
