--- a/content/publications/timing/cite.bib
+++ b/content/publications/timing/cite.bib
@@ -1,6 +1,6 @@
-@article{kim2025timing,
+@article{jang2025timing,
   title={{Timing: Temporality-Aware Integrated Gradients for Time Series Explanation}},
   author={Jang, Hyeongwon and Kim, Changhun and Yang, Eunho},
-  journal={Manuscript},
+  journal={ICLR Workshop on XAI4Science: From Understanding Model Behavior to Discovering New Scientific Knowledge (ICLRW-XAI4Science)},
   year={2025}
 }
