--- a/content/publications/timing/cite.bib
+++ b/content/publications/timing/cite.bib
@@ -1,6 +1,6 @@
 @article{jang2025timing,
-  title={{Timing: Temporality-Aware Integrated Gradients for Time Series Explanation}},
+  title={{TIMING: Temporality-Aware Integrated Gradients for Time Series Explanation}},
   author={Jang, Hyeongwon and Kim, Changhun and Yang, Eunho},
-  journal={ICLR Workshop on XAI4Science: From Understanding Model Behavior to Discovering New Scientific Knowledge (ICLRW-XAI4Science)},
+  journal={ICLR Workshop on XAI4Science: From Understanding Model Behavior to Discovering New Scientific Knowledge},
   year={2025}
 }
