--- a/content/publications/equi-ssl/cite.bib
+++ b/content/publications/equi-ssl/cite.bib
@@ -1,6 +1,6 @@
-@article{lee2025soft,
+@inproceedings{lee2025soft,
   title={{Soft Equivariance Regularization for Invariant Self-Supervised Learning}},
   author={Lee, Joohyung and Kim, Changhun and Kim, Hyunsu and Lee, Kwanhyung and Lee, Juho},
-  journal={Manuscript},
+  booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
   year={2025}
 }
