--- a/content/publications/delta-xai/cite.bib
+++ b/content/publications/delta-xai/cite.bib
@@ -1,6 +1,6 @@
-@article{kim2025delta-xai,
+@inproceedings{kim2025delta-xai,
   title={{Delta-XAI: A Unified Framework for Explaining Prediction Shifts in Online Time Series}},
   author={Kim, Changhun and Mun, Yechan and Jang, Hyeongwon and Lee, Eunseo and Hahn, Sangchul and Yang, Eunho},
-  journal={Manuscript},
+  booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
   year={2025}
 }
