Update CIKMW Best Paper Award, Minor Fix

--- a/content/publications/timing/cite.bib
+++ b/content/publications/timing/cite.bib
@@ -1,6 +1,6 @@
-@article{jang2025timing,
+@inproceedings{jang2025timing,
   title={{TIMING: Temporality-Aware Integrated Gradients for Time Series Explanation}},
   author={Jang, Hyeongwon and Kim, Changhun and Yang, Eunho},
-  journal={ICLR Workshop on XAI4Science: From Understanding Model Behavior to Discovering New Scientific Knowledge},
+  booktitle={International Conference on Machine Learning (ICML)},
   year={2025}
 }
