--- a/content/publications/deltashap/cite.bib
+++ b/content/publications/deltashap/cite.bib
@@ -1,6 +1,6 @@
-@article{kim2025deltashap,
+@inproceedings{kim2025deltashap,
   title={{DeltaSHAP: Explaining Prediction Evolutions in Online Patient Monitoring with Shapley Values}},
   author={Kim, Changhun and Mun, Yechan and Hahn, Sangchul and Yang, Eunho},
-  journal={Manuscript},
+  booktitle={ICML Workshop on Actionable Interpretability},
   year={2025}
 }
