Update ICLR 2026 papers

--- a/content/publications/delta-xai/cite.bib
+++ b/content/publications/delta-xai/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{kim2025delta-xai,
-  title={{Delta-XAI: A Unified Framework for Explaining Prediction Shifts in Online Time Series}},
+  title={{Delta-XAI: A Unified Framework for Explaining Prediction Changes in Online Time Series Monitoring}},
   author={Kim, Changhun and Mun, Yechan and Jang, Hyeongwon and Lee, Eunseo and Hahn, Sangchul and Yang, Eunho},
-  booktitle={Manuscript},
-  year={2025}
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2026}
 }
