--- a/content/publications/ser/cite.bib
+++ b/content/publications/ser/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{lee2025soft,
   title={{Soft Equivariance Regularization for Invariant Self-Supervised Learning}},
   author={Lee, Joohyung and Kim, Changhun and Kim, Hyunsu and Lee, Kwanhyung and Lee, Juho},
-  booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
-  year={2025}
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2026}
 }
